# homework_web_12

project/: .env.example  README.md  pyproject.toml
project/src/project/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
